# Borg-Agent-Orchestrator

./: .gitignore  Agents.md  NEXT_STEPS.md  README.md  pyproject.toml  requirements.txt
config/: advanced_xgboost.env.example  local_common_forecaster.example.json
docs/: project_report.docx
docs/en/: Agents.md  INDEX.md  MAS_ARCHITECTURE.md  NEXT_STEPS.md  README.md
docs/ko/: Agents.md  INDEX.md  MAS_ARCHITECTURE.md  NEXT_STEPS.md  README.md
reports/: 202603191915_forecaster_evaluation.md  202603310315_advanced_pipeline_handoff.md  202603310401_advanced_join_completed.md  202603310415_advanced_feature_and_training_progress.md  202603311120_tuning_and_tuned_retrain_status.md  202603311338_milestone.md  202603311627_feature_dictionary_explained.md  202603311627_feature_importance_evaluation.md  202603311640_model_directory_registry_and_ml_evolution.md  schema_reference.md
reports/en/: 202603191915_forecaster_evaluation.md  202603191915_schema_reference.md  202603191919_milestone.md  202603191933_milestone.md  202603271632_milestone.md  202603310236_advanced_flatten_handoff.md  202603310315_advanced_pipeline_handoff.md  (+16 more)
scripts/: build_local_common_forecaster_dataset.py  data_flattener.py  download_shards.sh  fibonacci.py  make_dataset.py  make_forecaster_dataset.py  run_advanced_download.sh  run_advanced_feature_build.sh  run_advanced_flatten.sh  run_advanced_join.sh  run_advanced_train.sh  run_advanced_train_resumable_detailed.sh  run_advanced_xgboost_pipeline.sh  setup_advanced_xgboost_workspace.sh  train_forecaster_baseline.py  tune_advanced_xgboost.py
(+29 files in other folders)
