[project]
name = "borg-mas-optimizer"
version = "0.1.0"
description = "Borg-inspired multi-agent system for forecasting, placement, and eviction."
requires-python = ">=3.10"
dependencies = [
    "polars>=1.0,<2.0",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
